// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledLink should have the following configurable style rules when configured 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  color: green !important;
}

.c0:hover {
  color: #d00;
}

.c0.active {
  color: #b00;
}

<a
  className="c0"
  href="/"
>
  <p>
    Hello World
  </p>
</a>
`;

exports[`StyledLink should have the following static style rules 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  color: #f00 !important;
}

.c0:hover {
  color: #d00;
}

.c0.active {
  color: #b00;
}

<a
  className="c0"
  href="/"
>
  <p>
    Hello World
  </p>
</a>
`;
